# Smart-Farm_Borj-Lella

integration_finale/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  integ.glade.bak  integ.gladep.bak
integration_finale/autom4te.cache/: output.1  requests  traces.0  traces.1
integration_finale/pixmaps/: ll  llllll  tr
integration_finale/po/: Makefile  Makefile.in
integration_finale/src/: AFF_identif.txt  E_identif.txt  Makefile  Makefile.am  Makefile.in  abscence.txt  admin.txt  affect.txt  affect1.txt  callbacks.c  callbacks.h  capteur_H.txt  capteur_T.txt  capteur_T1.txt  client.txt  client1.txt  cp_H_defectueux.txt  cp_T_defectueux.txt  employe.c  employe.h  employe.txt  equip.c  equip.h  equip.txt  finance.c  finance.h  fonction.c  fonction.h  integ  interface.c  interface.h  main.c  marques_cp_H_embetantes.txt  marques_cp_T_embetantes.txt  occurence_H.txt  ouvrier.txt  plantation.c  plantation.h  plante.txt  plante1.txt  (+9 more)
integration_finale/src/.deps/: callbacks.Po  employe.Po  equip.Po  finance.Po  plantation.Po
